# claude-whisper

./: LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
plans/: #_homebrew_distribution_plan_for_claude-whisper.md  conversation_continuity_with_command_similarity_detection.md  conversation_routing_for_claude_whisper.md  natural_language_file_reference_mapping_system.md  remove_working_directory_argument_and_enable_command-based_directory_detection.md
src/claude_whisper/: __init__.py  config.py  tools.py
src/claude_whisper/data/: __init__.py  dev_vocabulary.py  noise_phrases.py  task_patterns.py  word_corrections.py
tests/: README.md  conftest.py  test_config.py  test_integration.py  test_main.py
