[project]
name = "claude-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ashton Sidhu", email = "ashton.sidhu1994@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "mlx-whisper>=0.4.3",
    "pyaudio>=0.2.14",
]

[project.scripts]
claude-whisper = "claude_whisper:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
claude-whisper = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "claude-whisper",
]
